# angel-docs

./: .eslintrc.json  .gitignore  next.config.js  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  typography.ts
.github/workflows/: deploy.yml
generators/: plopfile.js
posts/: 12-dicas-de-javascript-que-todo-desenvolvedor-deve-conhecer.md  12-javascript-tips-every-developer-should-know.md  3-tecnicas-pessoais-que-transformaram-minha-carreira-em-desenvolvimento.md  documentation-in-rust.md  getting-started-with-rust.md
public/cms/: config.yml  index.html
public/content/: menu.json
scripts/fulltext-search/: Cargo.toml
src/components/Button/: index.tsx
src/components/Code/: index.tsx
src/components/Feedback/: index.tsx
src/components/Footer/: index.tsx
src/components/GridPattern/: index.tsx
src/components/Guides/: index.tsx
src/components/Header/: index.tsx
src/components/Heading/: index.tsx
src/components/HeroPattern/: index.tsx
src/components/Libraries/: index.tsx
src/components/Logo/: index.tsx
src/components/MobileNavigation/: index.tsx
src/components/Navigation/: index.tsx
src/contexts/: menu-context.tsx  navigation-provider.tsx  providers.tsx
src/lib/: api.ts  buildAlgoliaIndexes.ts  menu.ts  navigation.ts  search-store.ts  search.ts
src/pages/: 404.tsx  [...slug].tsx  [[...slug]].tsx  _app.tsx  _document.tsx  index.tsx
src/styles/: globals.css  post-body.module.css
src/types/: index.ts
wasm/fulltext-search/: Cargo.toml
wasm/fulltext-search/src/: filter.rs  storage.rs
(+11 files in other folders)
