[package]
name = "fulltext-search-core"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <lucas.kaique175@hotmail.com>"]


[lib]
crate-type = ["cdylib"]


[dependencies]
wee_alloc = "0.4"
once_cell = "1.8"
anyhow = "1.0"
bincode = "1.3"
serde-wasm-bindgen = "0.5" 
serde = { version = "1.0", features = ["derive"] }

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[dependencies.xorf]
version = "0.11"
default-features = false 
features = ["serde"]

[profile.release]
opt-level = 's' 
lto = true